--- a/index.html
+++ b/index.html
@@ -139,8 +139,11 @@
       <div class="product-title">RESELLER ALWAYS PRIME</div>
       <div class="price">Mulai Rp50.000</div>
       <div class="product-detail">
-Bot Telegram Bug WhatsApp Always Prime
-Dengan Sistem Perlindungan Bypass & Fitur Licenser
+𝐁𝐢𝐬𝐚 𝐉𝐮𝐚𝐥 𝐒𝐜𝐫𝐢𝐩𝐭 𝐋𝐚𝐠𝐢
+𝐌𝐚𝐬𝐮𝐤 𝐆𝐫𝐮𝐩 𝐑𝐞𝐬𝐦𝐢 𝐑𝐞𝐬𝐞𝐥𝐥𝐞𝐫
+𝐁𝐢𝐬𝐚 𝐀𝐝𝐝 𝐓𝐨𝐤𝐞𝐧 𝐒𝐞𝐧𝐝𝐢𝐫𝐢
+𝐅𝐫𝐞𝐞 𝐔𝐩𝐝𝐚𝐭𝐞 𝐏𝐞𝐫𝐦𝐚𝐧𝐞𝐧
+𝐀𝐤𝐬𝐞𝐬 𝐃𝐚𝐭𝐚𝐛𝐚𝐬𝐞
       </div>
     </div>
 
@@ -148,8 +151,12 @@ Dengan Sistem Perlindungan Bypass & Fitur Licenser
       <div class="product-title">PARTNERALWAYS PRIME</div>
       <div class="price">Rp70.000</div>
       <div class="product-detail">
-Bot Telegram Bug WhatsApp Always Prime
-Dengan Sistem Perlindungan Bypass & Fitur Licenser
+𝐁𝐢𝐬𝐚 𝐉𝐮𝐚𝐥 𝐒𝐜𝐫𝐢𝐩𝐭 𝐋𝐚𝐠𝐢
+𝐌𝐚𝐬𝐮𝐤 𝐆𝐫𝐮𝐩 𝐑𝐞𝐬𝐦𝐢 𝐑𝐞𝐬𝐞𝐥𝐥𝐞𝐫/𝐏𝐚𝐫𝐭𝐧𝐞𝐫
+𝐁𝐢𝐬𝐚 𝐀𝐝𝐝 𝐓𝐨𝐤𝐞𝐧 𝐒𝐞𝐧𝐝𝐢𝐫𝐢
+𝐅𝐫𝐞𝐞 𝐔𝐩𝐝𝐚𝐭𝐞 𝐏𝐞𝐫𝐦𝐚𝐧𝐞𝐧
+𝐀𝐤𝐬𝐞𝐬 𝐃𝐚𝐭𝐚𝐛𝐚𝐬𝐞
+𝐁𝐢𝐬𝐚 𝐎𝐩𝐞𝐧 𝐑𝐞𝐬𝐞𝐥𝐥𝐞𝐫
       </div>
     </div>
 
@@ -157,8 +164,14 @@ Dengan Sistem Perlindungan Bypass & Fitur Licenser
       <div class="product-title">MODERATOR ALWAYS PRIME</div>
       <div class="price">Rp100.000</div>
       <div class="product-detail">
-Bot Telegram Bug WhatsApp Always Prime
-Dengan Sistem Perlindungan Bypass & Fitur Licenser
+𝐁𝐢𝐬𝐚 𝐉𝐮𝐚𝐥 𝐒𝐜𝐫𝐢𝐩𝐭 𝐋𝐚𝐠𝐢
+𝐌𝐚𝐬𝐮𝐤 𝐆𝐫𝐮𝐩 𝐑𝐞𝐬𝐦𝐢 𝐑𝐞𝐬𝐞𝐥𝐥𝐞𝐫/𝐏𝐚𝐫𝐭𝐧𝐞𝐫/𝐌𝐨𝐝𝐬
+𝐁𝐢𝐬𝐚 𝐀𝐝𝐝 𝐓𝐨𝐤𝐞𝐧 𝐒𝐞𝐧𝐝𝐢𝐫𝐢
+𝐅𝐫𝐞𝐞 𝐔𝐩𝐝𝐚𝐭𝐞 𝐏𝐞𝐫𝐦𝐚𝐧𝐞𝐧
+𝐀𝐤𝐬𝐞𝐬 𝐃𝐚𝐭𝐚𝐛𝐚𝐬𝐞
+𝐁𝐢𝐬𝐚 𝐎𝐩𝐞𝐧 𝐑𝐞𝐬𝐞𝐥𝐥𝐞𝐫
+𝐁𝐢𝐬𝐚 𝐎𝐩𝐞𝐧 𝐏𝐚𝐫𝐭𝐧𝐞𝐫
+𝐍𝐚𝐦𝐚 𝐋𝐮 𝐌𝐚𝐬𝐮𝐤 𝐓𝐡𝐚𝐧𝐤𝐬 𝐓𝐨
       </div>
     </div>
 
@@ -166,8 +179,15 @@ Dengan Sistem Perlindungan Bypass & Fitur Licenser
       <div class="product-title">CEO ALWAYS PRIME</div>
       <div class="price">Rp130.000</div>
       <div class="product-detail">
-Bot Telegram Bug WhatsApp Always Prime
-Dengan Sistem Perlindungan Bypass & Fitur Licenser
+𝐁𝐢𝐬𝐚 𝐉𝐮𝐚𝐥 𝐒𝐜𝐫𝐢𝐩𝐭 𝐋𝐚𝐠𝐢
+𝐌𝐚𝐬𝐮𝐤 𝐆𝐫𝐮𝐩 𝐑𝐞𝐬𝐦𝐢 𝐑𝐞𝐬𝐞𝐥𝐥𝐞𝐫/𝐏𝐚𝐫𝐭𝐧𝐞𝐫/𝐌𝐨𝐝𝐬/𝐂𝐞𝐨
+𝐁𝐢𝐬𝐚 𝐀𝐝𝐝 𝐓𝐨𝐤𝐞𝐧 𝐒𝐞𝐧𝐝𝐢𝐫𝐢
+𝐅𝐫𝐞𝐞 𝐔𝐩𝐝𝐚𝐭𝐞 𝐏𝐞𝐫𝐦𝐚𝐧𝐞𝐧
+𝐀𝐤𝐬𝐞𝐬 𝐃𝐚𝐭𝐚𝐛𝐚𝐬𝐞
+𝐁𝐢𝐬𝐚 𝐎𝐩𝐞𝐧 𝐑𝐞𝐬𝐞𝐥𝐥𝐞𝐫
+𝐁𝐢𝐬𝐚 𝐎𝐩𝐞𝐧 𝐏𝐚𝐫𝐭𝐧𝐞𝐫
+𝐁𝐢𝐬𝐚 𝐎𝐩𝐞𝐧 𝐌𝐨𝐝𝐞𝐫𝐚𝐭𝐨𝐫
+𝐍𝐚𝐦𝐚 𝐋𝐮 𝐌𝐚𝐬𝐮𝐤 𝐓𝐡𝐚𝐧𝐤𝐬 𝐓𝐨
       </div>
     </div>
     
@@ -175,8 +195,16 @@ Dengan Sistem Perlindungan Bypass & Fitur Licenser
       <div class="product-title">OWNER ALWAYS PRIME</div>
       <div class="price">Mulai Rp150.000</div>
       <div class="product-detail">
-Bot Telegram Bug WhatsApp Always Prime
-Dengan Sistem Perlindungan Bypass & Fitur Licenser
+𝐁𝐢𝐬𝐚 𝐉𝐮𝐚𝐥 𝐒𝐜𝐫𝐢𝐩𝐭 𝐋𝐚𝐠𝐢
+𝐌𝐚𝐬𝐮𝐤 𝐆𝐫𝐮𝐩 𝐑𝐞𝐬𝐦𝐢 𝐑𝐞𝐬𝐞𝐥𝐥𝐞𝐫/𝐏𝐚𝐫𝐭𝐧𝐞𝐫/𝐌𝐨𝐝𝐬/𝐂𝐞𝐨/𝐎𝐰𝐧𝐞𝐫
+𝐁𝐢𝐬𝐚 𝐀𝐝𝐝 𝐓𝐨𝐤𝐞𝐧 𝐒𝐞𝐧𝐝𝐢𝐫𝐢
+𝐅𝐫𝐞𝐞 𝐔𝐩𝐝𝐚𝐭𝐞 𝐏𝐞𝐫𝐦𝐚𝐧𝐞𝐧
+𝐀𝐤𝐬𝐞𝐬 𝐃𝐚𝐭𝐚𝐛𝐚𝐬𝐞
+𝐁𝐢𝐬𝐚 𝐎𝐩𝐞𝐧 𝐑𝐞𝐬𝐞𝐥𝐥𝐞𝐫
+𝐁𝐢𝐬𝐚 𝐎𝐩𝐞𝐧 𝐏𝐚𝐫𝐭𝐧𝐞𝐫
+𝐁𝐢𝐬𝐚 𝐎𝐩𝐞𝐧 𝐌𝐨𝐝𝐞𝐫𝐚𝐭𝐨𝐫
+𝐁𝐢𝐬𝐚 𝐎𝐩𝐞𝐧 𝐂𝐞𝐨
+𝐍𝐚𝐦𝐚 𝐋𝐮 𝐌𝐚𝐬𝐮𝐤 𝐓𝐡𝐚𝐧𝐤𝐬 𝐓𝐨
       </div>
     </div>
 
@@ -184,8 +212,18 @@ Dengan Sistem Perlindungan Bypass & Fitur Licenser
       <div class="product-title">SVIP ALWAYS PRIME</div>
       <div class="price">Rp200.000</div>
       <div class="product-detail">
-Bot Telegram Bug WhatsApp Always Prime
-Dengan Sistem Perlindungan Bypass & Fitur Licenser
+𝐁𝐢𝐬𝐚 𝐉𝐮𝐚𝐥 𝐒𝐜𝐫𝐢𝐩𝐭 𝐋𝐚𝐠𝐢
+𝐌𝐚𝐬𝐮𝐤 𝐆𝐫𝐮𝐩 𝐑𝐞𝐬𝐦𝐢 𝐑𝐞𝐬𝐞𝐥𝐥𝐞𝐫/𝐏𝐚𝐫𝐭𝐧𝐞𝐫/𝐌𝐨𝐝𝐬/𝐂𝐞𝐨/𝐎𝐰𝐧𝐞𝐫/𝐒𝐯𝐢𝐩
+𝐁𝐢𝐬𝐚 𝐀𝐝𝐝 𝐓𝐨𝐤𝐞𝐧 𝐒𝐞𝐧𝐝𝐢𝐫𝐢
+𝐅𝐫𝐞𝐞 𝐔𝐩𝐝𝐚𝐭𝐞 𝐏𝐞𝐫𝐦𝐚𝐧𝐞𝐧
+𝐀𝐤𝐬𝐞𝐬 𝐃𝐚𝐭𝐚𝐛𝐚𝐬𝐞
+𝐁𝐢𝐬𝐚 𝐎𝐩𝐞𝐧 𝐑𝐞𝐬𝐞𝐥𝐥𝐞𝐫
+𝐁𝐢𝐬𝐚 𝐎𝐩𝐞𝐧 𝐏𝐚𝐫𝐭𝐧𝐞𝐫
+𝐁𝐢𝐬𝐚 𝐎𝐩𝐞𝐧 𝐌𝐨𝐝𝐞𝐫𝐚𝐭𝐨𝐫
+𝐁𝐢𝐬𝐚 𝐎𝐩𝐞𝐧 𝐂𝐞𝐨
+𝐁𝐢𝐬𝐚 𝐎𝐩𝐞𝐧 𝐎𝐰𝐧𝐞𝐫
+𝐍𝐚𝐦𝐚 𝐋𝐮 𝐌𝐚𝐬𝐮𝐤 𝐓𝐡𝐚𝐧𝐤𝐬 𝐓𝐨
+𝐅𝐫𝐞𝐞 𝐒𝐜 𝐍𝐨 𝐄𝐧𝐜 𝐔𝐩𝐝𝐚𝐭𝐞 𝐏𝐞𝐫𝐦𝐚𝐧𝐞𝐧
       </div>
     </div>
 
@@ -199,5 +237,5 @@ Dengan Sistem Perlindungan Bypass & Fitur Licenser
   </script>
 
 </body>
-  </html>
-  
+        </html>
+        
